# pgsql-search

./: .gitignore  README.md  logfile  pyproject.toml
nbs/: database.ipynb  fts.ipynb  insert_dataset.ipynb  quickstart.ipynb
scripts/: gradio_app.py  hybrid_search.py  insert_into_db.py  load_datasets.py  query.py  quickstart.py
src/pgsql_search/: __init__.py  core.py  database.py  loader.py
tests/: test_import.py
