[project]
authors = [{name = "dnth", email = "dickson.neoh@gmail.com"}]
description = "Simplify PostgreSQL search using Python."
name = "pgsql-search"
requires-python = ">= 3.10, <3.13"
version = "0.1.0"
dependencies = ["psycopg>=3.2.3,<4", "loguru>=0.7.3,<0.8", "pillow>=11.0.0,<12", "tqdm>=4.67.1,<5", "datasets>=3.2.0,<4", "transformers>=4.47.0,<5", "pgvector>=0.3.6,<0.4", "matplotlib>=3.9.3,<4", "xinfer>=0.0.7,<0.0.8", "sentence-transformers>=3.3.1,<4"]


[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["nvidia/label/cuda-12.4.0", "nvidia", "conda-forge", "pytorch"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pgsql_search = { path = ".", editable = true }

[tool.pixi.tasks]
quickstart = "python scripts/quickstart.py"
insert-db = "python scripts/insert_into_db.py"
query = "python scripts/query.py"
configure-db = "initdb -D mylocal_db && pg_ctl -D mylocal_db -l logfile start"
stop-db = "pg_ctl -D mylocal_db stop"
remove-db = "rm -rf ./mylocal_db"
gradio = "python scripts/gradio_app.py"

[tool.pixi.dependencies]
postgresql = "<17"
cuda = {version = "*", channel="nvidia/label/cuda-12.4.0"}
pytorch = {version = ">=2.4.*", channel="pytorch"}
torchvision = {version = ">=0.19.*", channel="pytorch"}
pytorch-cuda = {version = "12.4.*", channel="pytorch"}
pgvector = ">=0.7.4,<0.8"
ipykernel = ">=6.29.5,<7"
ipywidgets = ">=8.1.5,<9"

[tool.pixi.environments]
test = { features = ["test"], solve-group = "default" }

[dependency-groups]
test = ["pytest"]
