[project]
authors = [{name = "dnth", email = "dickson.neoh@gmail.com"}]
description = "Simplify PostgreSQL search using Python."
name = "pgsql-search"
requires-python = ">= 3.10, <3.13"
version = "0.1.0"
dependencies = [
    "psycopg>=3.2.3,<4",
    "loguru>=0.7.3,<0.8",
    "pillow>=11.0.0,<12",
    "tqdm>=4.67.1,<5",
    "datasets>=3.2.0,<4",
    "matplotlib>=3.9.3,<4",
    "itables>=2.2.4,<3"
, "pgvector>=0.3.6,<0.4"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
pgsql_search = { path = ".", editable = true }

[tool.pixi.tasks]
configure-db = "initdb -D mylocal_db && pg_ctl -D mylocal_db -l logfile start"
stop-db = "pg_ctl -D mylocal_db stop"
remove-db = "rm -rf ./mylocal_db"

[tool.pixi.dependencies]
postgresql = "<17"
pgvector = ">=0.7.4,<0.8"
ipykernel = ">=6.29.5,<7"
ipywidgets = ">=8.1.5,<9"

[tool.pixi.environments]
test = { features = ["test"], solve-group = "default" }

[dependency-groups]
test = ["pytest"]
